# DocYou

./: Todo.md
Backend/: .gitignore
Backend/backend/: manage.py  pyproject.toml
Backend/backend/docyou/: asgi.py  middlewares.py  models.py  settings.py  urls.py  wsgi.py
Backend/backend/docyou/constants/: plans.py
Backend/backend/docyou/controllers/console/: __init__.py  errors.py  wraps.py
Backend/backend/docyou/controllers/console/workspace/: account.py  errors.py  init.py  initValidation.py  organization.py  project.py  setup.py
Backend/backend/docyou/libs/: exception.py  passport.py  password.py  rsa.py
Backend/backend/docyou/middleware/: exceptions.py
Backend/backend/docyou/migrations/: 0001_initial.py  0002_account_interface_theme.py
Backend/backend/docyou/model/: accounts.py  base.py  defaults.py  documents.py  parser.py  utils.py
Backend/backend/docyou/models/: accounts.py  base.py  defaults.py  documents.py  parser.py
Backend/backend/docyou/service/: accounts.py  organization.py
Backend/backend/docyou/services/: account_service.py  project.py
Backend/backend/docyou/services/errors/: account.py
Backend/backend/docyou/tasks/: mail_invite_member_task.py
Backend/backend/docyou/utils/: init.py
Backend/deploy/: .env  docker-compose-dev.yml  docker-compose.yml  middleware.env
Frontend/frontend/: .eslintrc.json  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts
Frontend/frontend/src/: main.tsx
Frontend/frontend/src/app/: globals.css  layout.tsx  page.tsx
Frontend/frontend/src/constant/: index.ts  navicons.tsx
(+126 files in other folders)
